<resources>
    <!-- Ключи сервисов -->
    <integer name="com_vk_sdk_AppId">5312521</integer>
    <string name="facebook_app_id">240527739616747</string>

    <string name="app_name">JATumba</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="compositions">Compositions</string>
    <string name="bands">Bands</string>
    <string name="error">Apllication error! Sorry…</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="do_login">Login</string>
    <string name="register">Sign Up</string>
    <string name="prompt_login">Enter Login</string>
    <string name="prompt_password">Enter password</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_here">Log in here.</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_username">Enter username</string>
    <string name="enter_all_fields">Enter all fields.</string>
    <string name="band_members">Band members</string>
    <string name="log_out">Log out</string>
    <string name="prompt_first_name">Enter first name</string>
    <string name="prompt_last_name">Enter last name</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="create_composition">Create composition</string>
    <string name="create_band">create_band</string>
</resources>
