<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19191C">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:clickable="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:clickable="false"
                android:drawableLeft="@drawable/ic_clear_white_24dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_clear_white_24dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/cancel"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:clickable="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:clickable="false"
                android:drawableLeft="@drawable/ic_done_white_24dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_done_white_24dp"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/register"
                android:textColor="@android:color/white" />
        </FrameLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttons"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle">

                <AutoCompleteTextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:textColor="@color/textColorPrimary"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:theme="@style/EditTextStyle" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/TextInputLayoutStyle">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/textColorPrimary"
                    android:singleLine="true"
                    android:theme="@style/EditTextStyle" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>